--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,7 +35,11 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  dialogflow_flutter: ^1.0.0
+  googleapis_auth: ^1.4.1
+  http: ^0.13.6
+  platform_device_id: ^1.0.1
+  oauth2: ^2.0.2
+  json_annotation: ^4.8.1
     
 
 dev_dependencies:
@@ -48,6 +52,8 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^2.0.0
+  json_serializable: ^6.7.1
+  build_runner: ^2.3.3
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -60,7 +66,7 @@ flutter:
   # the material Icons class.
   uses-material-design: true
   assets:
-    - assets/credentials.json
+    - assets/
 
   # To add assets to your application, add an assets section, like this:
   # assets:
